# sparkengine

./: Makefile.am  Makefile.common  configure.ac
include/Core/: SPK_Attributes.h  SPK_Connections.h  SPK_Controls.h  SPK_DescriptionDefines.h  SPK_Enum.h  SPK_Getters.h  SPK_Group.h  SPK_Logger.h  SPK_Object.h  SPK_Setters.h  SPK_StaticDescription.h  SPK_Transform.h  SPK_TypeOperations.h  SPK_Types.h
src/: Makefile.am
src/Core/: Makefile.am
